    - `storage.expirationDays` to specify the validity period of the rollout plan cache in days.
    - `storage.clearOnInit` to clear the rollout plan cache on SDK initialization.
 - Updated SDK_READY_FROM_CACHE event when using the `LOCALSTORAGE` storage type to be emitted alongside the SDK_READY event if it has not already been emitted.

11.1.0 (January 17, 2025)
 - Added support for the new impressions tracking toggle available on feature flags, both respecting the setting and including the new field being returned on `SplitView` type objects. Read more in our docs.
 - Updated @splitsoftware/splitio-commons package to version 2.1.0.

11.0.4 (January 9, 2025)
 - Bugfixing - Updated @splitsoftware/splitio-commons package to version 2.0.3, which properly handles rejected promises when using targeting rules with segment matchers in consumer modes (e.g., Redis and Pluggable storages).

11.0.3 (December 4, 2024)
 - Bugfixing - Updated @splitsoftware/splitio-commons package to version 2.0.2 that sanitizes the `SplitSDKMachineName` header value to avoid exceptions on HTTP/S requests when it contains non ISO-8859-1 characters (Related to issue https://github.com/splitio/javascript-client/issues/847).

11.0.2 (November 25, 2024)
 - Updated bloom-filters and fetch-mock dependencies for vulnerability fixes.
 - Bugfixing - Updated @splitsoftware/splitio-commons package to version 2.0.1 that fixes an issue with the SDK_UPDATE event on Node.js, where it was not being emitted if there was an empty segment and the SDK received a feature flag update notification.

11.0.1 (November 11, 2024)
 - Bugfixing - Revert removal of TypeScript `SplitIO` namespace at `/types/splitio.d.ts` to allow explicit imports of types from the JavaScript SDK package. E.g., `import type { IBrowserSettings } from '@splitsoftware/splitio/types/splitio';`.

11.0.0 (November 1, 2024)
 - Added support for targeting rules based on large segments for browsers (client-side API).