@@ -4,6 +4,7 @@
     - `storage.expirationDays` to specify the validity period of the rollout plan cache in days.
     - `storage.clearOnInit` to clear the rollout plan cache on SDK initialization.
  - Updated SDK_READY_FROM_CACHE event when using the `LOCALSTORAGE` storage type to be emitted alongside the SDK_READY event if it has not already been emitted.
+ - Updated @splitsoftware/splitio-commons package to version 2.2.0.
 
 11.1.0 (January 17, 2025)
  - Added support for the new impressions tracking toggle available on feature flags, both respecting the setting and including the new field being returned on `SplitView` type objects. Read more in our docs.
